--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -2,3 +2,9 @@ validation_query=SELECT 1
 data_source_url=jdbc:mysql://localhost:3306/dmes?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&allowMultiQueries=true
 data_source_username=root
 data_source_password=lxw1993822
+
+mongo_host=localhost
+mongo_port=27017
+mongo_dbname=mydb
+mongo_username=admin
+mongo_password=lxw1993822
