--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,13 @@
     <description>DataMiningExperimentalSystem</description>
     <url>http://localhost:8080/DMES</url>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.2.7.RELEASE</version>
+    </parent>
+
+
     <!-- 集中定义公用的依赖版本号 -->
     <!--版本变量设置 start-->
     <properties>
@@ -54,6 +61,10 @@
         <httpclient.version>4.3.3</httpclient.version>
         <jackson-databind.version>2.4.2</jackson-databind.version>
         <fastjson.version>1.1.43</fastjson.version>
+
+        <spring-mongodb.version>1.9.1.RELEASE</spring-mongodb.version>
+        <spring-boot.version>1.3.3.RELEASE</spring-boot.version>
+        <mongodb.version>3.2.0</mongodb.version>
         <!--架包版本变量 end-->
 
         <!--插件版本变量 start-->
@@ -102,6 +113,28 @@
         <!--spring 源码包下载地址：https://github.com/spring-projects/spring-framework/releases-->
         <!--http://takeme.iteye.com/blog/1977585-->
         <!--http://blog.csdn.net/bluishglc/article/details/6585221-->
+
+        <!--Spring Data Mongodb-->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>1.12.1.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-mongodb</artifactId>
+            <version>1.9.1.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>3.2.2</version>
+        </dependency>
+
+
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
@@ -193,6 +226,12 @@
             <groupId>javax.persistence</groupId>
             <artifactId>persistence-api</artifactId>
             <version>${persistence-api.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-mongodb</artifactId>
+            <version>${spring-mongodb.version}</version>
         </dependency>
 
         <!-- ############################################################### Spring 相关包 end ############################################################### -->
@@ -329,8 +368,16 @@
             <artifactId>commons-lang3</artifactId>
             <version>${commons-lang3.version}</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
 
-
+        <!--MongoDB-->
     </dependencies>
     <!--架包依赖 end-->
 
