--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
         <commons-lang3.version>3.3.2</commons-lang3.version>
         <commons-email.version>1.3.2</commons-email.version>
         <commons-beanutils.version>1.9.2</commons-beanutils.version>
+        <commons-pool2.version>2.4.2</commons-pool2.version>
 
         <httpclient.version>4.3.3</httpclient.version>
         <jackson-databind.version>2.4.2</jackson-databind.version>
@@ -65,6 +66,9 @@
         <spring-mongodb.version>1.9.1.RELEASE</spring-mongodb.version>
         <spring-boot.version>1.3.3.RELEASE</spring-boot.version>
         <mongodb.version>3.2.0</mongodb.version>
+
+        <activemq.version>5.13.2</activemq.version>
+        <spring-jms.version>4.2.5.RELEASE</spring-jms.version>
         <!--架包版本变量 end-->
 
         <!--插件版本变量 start-->
@@ -234,6 +238,12 @@
             <version>${spring-mongodb.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jms</artifactId>
+            <version>${spring-jms.version}</version>
+        </dependency>
+
         <!-- ############################################################### Spring 相关包 end ############################################################### -->
 
 
@@ -376,8 +386,21 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>${commons-pool2.version}</version>
+        </dependency>
 
-        <!--MongoDB-->
+
+        <!--ActiveMQ-->
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-all</artifactId>
+            <version>${activemq.version}</version>
+        </dependency>
+
+
     </dependencies>
     <!--架包依赖 end-->
 
