1.实现MongoDaoSupport通用方法 2.测试MongoDB的CRUD

--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -6,5 +6,5 @@ data_source_password=lxw1993822
 mongo_host=localhost
 mongo_port=27017
 mongo_dbname=mydb
-mongo_username=admin
-mongo_password=lxw1993822
+mongo_username=niko
+mongo_password=admin
