--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 
         <!--2016-02-20注释掉代码，切换到spring3试试-->
         <!--mybatis官网看到,如果要使用spring4的话,要用：mybatis-2-spring这个架包,http://blog.mybatis.org/2015/11/spring-4-got-you-down-with-no-ibatis.html-->
-        <spring.version>4.2.5.RELEASE</spring.version>
+        <spring.version>4.3.2.RELEASE</spring.version>
         <mybatis.version>3.3.1</mybatis.version>
         <mybatis-spring.version>1.2.5</mybatis-spring.version>
 
@@ -50,7 +50,7 @@
         <javaee-api.version>7.0</javaee-api.version>
         <jstl.version>1.2</jstl.version>
         <jsp-api.version>2.0</jsp-api.version>
-        <servlet-api.version>2.5</servlet-api.version>
+        <servlet-api.version>2.4</servlet-api.version>
 
         <commons-fileupload.version>1.3.1</commons-fileupload.version>
         <commons-io.version>2.4</commons-io.version>
@@ -67,8 +67,8 @@
         <spring-boot.version>1.3.3.RELEASE</spring-boot.version>
         <mongodb.version>3.2.0</mongodb.version>
 
-        <activemq.version>5.13.2</activemq.version>
-        <spring-jms.version>4.2.5.RELEASE</spring-jms.version>
+        <activemq.version>5.14.0</activemq.version>
+        <spring-jms.version>4.1.0.RELEASE</spring-jms.version>
         <!--架包版本变量 end-->
 
         <!--插件版本变量 start-->
@@ -126,18 +126,10 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-mongodb</artifactId>
-            <version>1.9.1.RELEASE</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongo-java-driver</artifactId>
             <version>3.2.2</version>
         </dependency>
-
-
 
         <dependency>
             <groupId>org.springframework</groupId>
@@ -154,6 +146,18 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-messaging</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-oxm</artifactId>
             <version>${spring.version}</version>
         </dependency>
 
@@ -394,9 +398,10 @@
 
 
         <!--ActiveMQ-->
+        <!-- 2016年08月24日 如果引入spring-all会导致项目启动过失败  现在改成activemq-spring -->
         <dependency>
             <groupId>org.apache.activemq</groupId>
-            <artifactId>activemq-all</artifactId>
+            <artifactId>activemq-spring</artifactId>
             <version>${activemq.version}</version>
         </dependency>
 
