--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -8,3 +8,7 @@ mongo_port=27017
 mongo_dbname=mydb
 mongo_username=niko
 mongo_password=admin
+
+redis_host=127.0.0.1
+redis_port=6379
+redis_keynum=3
